# apiku

./: .dockerignore  .gitignore  Dockerfile  README.md  example_backend_endpoint.py  instruction.md  pyproject.toml  redis_master.conf  requirements.txt
agents/: agen_bantek.py  agen_emp.py  agen_maps.py  agen_perkaba.py  agen_polisi.py  agen_wassidik.py  agui_operator.py  ahli_hukum_pidana.py  ciptakerja_chat.py  dit_reskrimum_chat.py  dokpol.py  example.py  fidusia.py  fismondev_chat.py  forensic.py  hoax.py  image.py  indagsi_chat.py  ite_chat.py  kesehatan_chat.py  kuhap_chat.py  kuhp_chat.py  narkotika_chat.py  operator.py  p2sk_chat.py  perbankan.py  ppa_ppo_chat.py  research.py  sage.py  scholar.py  sentiment_analyzer.py  settings.py  siber_chat.py  tipidkor_chat.py  tipidter_agui.py  tipidter_chat.py  trend_kejahatan.py  wassidik_chat.py  web_search.py
agents/tmp/: urls__None.md
api/: main.py  settings.py
api/routes/: agents.py  agui.py  playground.py  status.py  v1_router.py
custom_tools/: googlescholar.py
data/: UUNomor42Tahun1999.txt  UUno42fidusia.md
data/NARKOTIKA/: PERKABAPELAKSPENYIDIKANTPNO1TH2022TGL27DES2022.txt  PermenkesNomor30Tahun2023.txt  UUNomor35Tahun2009.txt
data/hukum/: No8Tahun2021.txt  PP Nomor 17 Tahun 2025.txt  (+24 more)
docs/: AGUI_API_USAGE.md  AGUI_IMPLEMENTATION.md
scripts/: generate_requirements.sh
teams/: ahli_hukum_pidana.py  penelititipidkor.py  settings.py
tmp/: ASN BPN Dibekukan Karena Menerbitkan 186 SHM di Hutan Lindung Gunung Dempo.md  Penerimaan suap oleh pejabat ASN.md  Seorang pejabat di pertanahan diduga menerima suap untuk menerbitkan shm tanah kawasan hutan lindung di kabupaten gowa.md  Tindakan korupsi.md  pejabat pertanahan menerbitkan SHM kawasan hutan lindung.md  workflows.db
workflows/: analisis_hukum.py  modus.md  modus_operandi.py  sentiment_analysis.py  settings.py  startup_idea_validator.py
workspace/: dev_resources.py  prd_resources.py  settings.py
(+43 files in other folders)
